--- a/admin.html
+++ b/admin.html
@@ -77,7 +77,7 @@
 
   <script>
     // 🔐 Contraseña configurable
-    const ADMIN_PASSWORD = "sinoca300secure"; // ← Cambiala a la que vos quieras
+    const ADMIN_PASSWORD = "45864722"; // ← Cambiala a la que vos quieras
 
     function login() {
       const input = document.getElementById("password").value;
