--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <script>
     // === CONFIGURACIÓN ===
     const WHATSAPP_NUMBER = "5492236735372";
-    const SHEET_URL = "TU_URL_DEL_WEB_APP_DE_GOOGLE_SHEETS"; // 🔹 Reemplaza luego con tu URL del Apps Script desplegado
+    const SHEET_URL = "https://script.google.com/macros/s/AKfycbyLFak680IPUvpfru7WAkqQO8s63dCpLOLD_8RPa0L4eiFWU1EwXRYJbHrKK8xLokEK/exec"; // 🔹 Reemplaza luego con tu URL del Apps Script desplegado
 
     // === FUNCIONES AUXILIARES ===
     function getCookie(name) {
@@ -74,3 +74,4 @@
   </script>
 </body>
 </html>
+
