--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🎰 Circo Online</title>
 
+  <!-- META DE VERIFICACIÓN DE DOMINIO DE META -->
   <meta name="facebook-domain-verification" content="o1hoq82czvz17489kpf7eb2sqc8ta1" />
 
+  <!-- FUENTES -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" rel="stylesheet"></noscript>
 
+  <!-- CSS -->
   <link rel="stylesheet" href="estilo.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
 
-  <!-- PIXEL DE META -->
+  <!-- PIXEL META -->
   <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -29,8 +32,8 @@
     fbq('init', '1946841772846486');
     fbq('track', 'PageView');
   </script>
-
 </head>
+
 <body style="background-image: url('img/fondotrebol.png'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
   
   <h1 class="logo-text" id="logoContainer" style="visibility: visible;">
@@ -85,12 +88,11 @@
     </div>
   </div>
 
+  <!-- NUEVO SCRIPT FUNCIONAL -->
   <script>
-    // === CONFIGURACIÓN ===
     const WHATSAPP_NUMBER = "5492236735372";
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbwszuCqEaujGBU4g7-RoFTIxVjV7O188PoL6r0HMptCV0QC2qkumZVpu7GHiRmML66y/exec";
 
-    // === FUNCIONES AUXILIARES ===
     function getCookie(name) {
       const match = document.cookie.match(new RegExp("(^| )" + name + "=([^;]+)"));
       return match ? match[2] : "";
@@ -103,33 +105,33 @@
       return id;
     }
 
-    async function handleWhatsAppClick() {
+    async function handleWhatsAppClick(event) {
+      event?.preventDefault?.();
+
       const fbp = getCookie("_fbp");
-      const fbc =
-        getCookie("_fbc") ||
-        (window.location.search.match(/fbclid=([^&]+)/)
-          ? "fb.1." + Date.now() + "." + RegExp.$1
-          : "");
+      const fbc = getCookie("_fbc") || 
+        (window.location.search.match(/fbclid=([^&]+)/) ? "fb.1." + Date.now() + "." + RegExp.$1 : "");
+
       const click_id = generateShortID();
       const event_id = "contact-" + click_id;
       const timestamp = new Date().toISOString();
 
-      // Evento Pixel Meta
-      if (typeof fbq !== "undefined") fbq("track", "Contact", { event_id });
+      if (typeof fbq !== "undefined") {
+        try { fbq("track", "Contact", {}, { eventID: event_id }); } catch(e) {}
+      }
 
-      // Enviar datos al Sheet
-      const payload = { timestamp, click_id, fbp, fbc, event_id };
       try {
         await fetch(SHEET_URL, {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload),
+          mode: "no-cors",
+          cache: "no-cache",
+          headers: { "Content-Type": "text/plain;charset=UTF-8" },
+          body: JSON.stringify({ click_id, fbp, fbc, event_id, timestamp })
         });
       } catch (err) {
-        console.warn("Error al enviar al Sheet:", err);
+        console.warn("Error aparente en fetch:", err);
       }
 
-      // Redirigir a WhatsApp
       const message = `Hola, quiero crear mi usuario. Mi código es ${click_id}`;
       window.open(`https://wa.me/${WHATSAPP_NUMBER}?text=${encodeURIComponent(message)}`, "_blank");
     }
@@ -141,4 +143,3 @@
   </script>
 </body>
 </html>
-
