--- a/admin.html
+++ b/admin.html
@@ -8,8 +8,8 @@
 <body style="font-family:Arial; margin:40px;">
   <h2>Registrar compra manual</h2>
 
-  <label>Click ID:</label><br/>
-  <input id="click_id" placeholder="Ej: A3F9KQ" style="width:200px;"/><br/><br/>
+  <label>Código del cliente (lead_id):</label><br/>
+  <input id="click_id" placeholder="Ej: N7XXA" style="width:200px;"/><br/><br/>
 
   <label>Teléfono del comprador (sin +):</label><br/>
   <input id="phone" placeholder="549XXXXXXXXXX" style="width:200px;"/><br/><br/>
@@ -19,12 +19,12 @@
 
   <button id="send" style="padding:10px 20px;">Enviar a Meta</button>
 
-  <p id="status"></p>
+  <p id="status" style="font-weight:bold;"></p>
 
   <script>
-    const ACCESS_TOKEN = "TU_TOKEN_DE_ACCESO_DE_META"; // Reemplaza con tu token válido
+    const ACCESS_TOKEN = "TU_TOKEN_DE_ACCESO_DE_META"; // 👈 tu token real aquí
     const PIXEL_ID = "1946841772846486";
-    const SHEET_URL = "TU_URL_DEL_WEB_APP_DE_GOOGLE_SHEETS"; // misma que el index.html
+    const SHEET_URL = "https://script.google.com/macros/s/AKfycbwyADs1Mu32qEnFhwV4ySNK6Uaa3WzaCkDU_o3xFnhgMvXxvZcE3Pps6EGRguwyFhqq/exec"; // misma URL del index
 
     document.getElementById('send').addEventListener('click', async () => {
       const click_id = document.getElementById('click_id').value.trim();
@@ -33,35 +33,51 @@
       const status = document.getElementById('status');
 
       if (!click_id || !phone || !value) {
-        status.textContent = "Completa todos los campos.";
+        status.textContent = "⚠️ Completa todos los campos.";
+        status.style.color = "orange";
         return;
       }
 
-      status.textContent = "Buscando datos en el sheet...";
+      status.textContent = "🔎 Buscando datos en la hoja...";
+      status.style.color = "white";
 
       try {
+        // ✅ 1. Obtener todos los datos de la hoja como texto
         const res = await fetch(SHEET_URL);
         const text = await res.text();
 
-        // Buscar el registro del click_id
-        const row = text.split('\n').find(r => r.includes(click_id));
-        if (!row) {
-          status.textContent = "No se encontró el ID en la hoja.";
+        // ✅ 2. Buscar la fila correspondiente al click_id (lead_id)
+        const line = text.split('\n').find(row => row.includes(click_id));
+        if (!line) {
+          status.textContent = "❌ No se encontró el código en la hoja.";
+          status.style.color = "red";
           return;
         }
 
-        const [ , , fbp, fbc, event_id ] = row.split(',');
+        // ✅ 3. Parsear los valores correctamente
+        // Estructura esperada en la hoja:
+        // timestamp | lead_id | fbp | fbc | event_id | name | phone
+        const cols = line.split(',');
+        const fbp = cols[2]?.trim() || "";
+        const fbc = cols[3]?.trim() || "";
+        const event_id = cols[4]?.trim() || "";
 
-        // Enviar a Meta CAPI
+        if (!fbp && !fbc) {
+          status.textContent = "⚠️ No se encontraron fbp/fbc en la hoja.";
+          status.style.color = "orange";
+          return;
+        }
+
+        // ✅ 4. Crear el payload para Meta CAPI
         const payload = {
           data: [{
             event_name: "Purchase",
             event_time: Math.floor(Date.now() / 1000),
-            event_id: event_id.trim(),
+            event_id: event_id || ("purchase-" + click_id),
             user_data: {
-              ph: phone, 
-              fbp: fbp.trim(), 
-              fbc: fbc.trim()
+              ph: phone,
+              fbp: fbp,
+              fbc: fbc
             },
             custom_data: {
               value: value,
@@ -70,6 +86,7 @@
           }]
         };
 
+        // ✅ 5. Enviar evento a Meta
         const response = await fetch(`https://graph.facebook.com/v18.0/${PIXEL_ID}/events?access_token=${ACCESS_TOKEN}`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
@@ -77,13 +94,20 @@
         });
 
         const json = await response.json();
+        console.log("Meta Response:", json);
+
         if (json.events_received) {
           status.textContent = "✅ Compra registrada correctamente en Meta.";
+          status.style.color = "#00ff88";
         } else {
           status.textContent = "⚠️ Error al enviar a Meta: " + JSON.stringify(json);
+          status.style.color = "orange";
         }
+
       } catch (err) {
-        status.textContent = "Error: " + err.message;
+        console.error(err);
+        status.textContent = "❌ Error de conexión o lectura: " + err.message;
+        status.style.color = "red";
       }
     });
   </script>
